<resources>
    <string name="app_name">
kafe</string>
    <string name="esp">
        In its pure form, espresso is more popular in Europe than America, particularly in Italy.
        Though catching in America, derivatives and misconceptions are spreading like cream in coffee.
        For instance, many hold the misconception that espresso is a dark, bitter to burnt-flavored roast of coffee.
        In fact, espresso is not a roast at all; it is a method of preparing coffee. Espresso coffee is often blended from several roasts and varietals to
        form a bold - not bitter flavor. The finely ground coffee is tightly packed or tamped into a “portafilter”; high-pressure water is then forced through
        the grounds and extracted in small, concentrated amounts. Intensity is the key here.
    </string>
    <string name="capp">
         A ‘traditional morning heart starter’. Steamed foamed velvety milk poured over one shot (1) of coffee oil extract made from 12gm of freshly ground
        beans producing 38ml of essence.Finished by topping with foam and a sprinkle of chocolate powder. Served in a pre heated vitrified ceramic cup.
        A cappuccino usually exceeds the height of the cup, making the foam visible above the side of the cup.
        The foam on top of the cappuccino acts as an insulator and helps retain the heat of the liquid, allowing it to stay hotter longer."
    </string>
    <string name="amer">
An Americano is an espresso-based drink designed to resemble coffee brewed in a drip filter,
        considered popular in the United States of America.
        This drink consists of a single or double-shot of espresso combined with up to four or five ounces of hot water in a two-demitasse cup.
        It is important to note, that an Americano is created by adding the water to an already extracted espresso,
        not by extracting extra water through a single espresso puck.
        An Americano can be produced from lighter roasted coffees and roasts not generally associated with espresso, such as Ethiopian or Sumatran origins.
        While some state that the Americano was created in Europe to deride the perceived American taste for weaker coffees,
        it is more likely that it was developed in the United States city of Seattle.
        A well-made Americano retains the subtle aroma of espresso with a lighter body and less bitterness.
    </string>
    <string name="caffe">
        The term as used in English is a shortened form of the Italian caffè latte , caffelatte or caffellatte,
        which means "milk coffee". The word is also sometimes spelled latté or lattè in English with different kinds of accent marks,
        which can be a hyperforeignism or a deliberate attempt to indicate that the word is not pronounced according to the rules of English orthography.
        Caffè latte is a coffee-based drink made primarily from espresso and steamed milk. It consists of one-third espresso,
        two-thirds heated milk and about 1cm of foam. Depending on the skill of the barista, the foam can be poured in such a way to create a picture.
        Common pictures that appear in lattes are love hearts and ferns. Latte art is an interesting topic in itself.
    </string>
    <string name="lait">
        Café au lait is coffee with hot milk added. It differs from white coffee,which is coffee with cold milk or other whitener added.
        Café au lait is a French coffee drink. In Europe, "café au lait" stems from the same continental tradition as "caffè latte" in Italy,
        "café con leche" in Spain, "kawa biała" ("white coffee") in Poland, "Milchkaffee" in Germany, "Grosser Brauner" in Austria, "koffie verkeerd"
        in Netherlands, and "café com leite" in Portugal, simply "coffee with milk". In northern Europe, café au lait is the name most often used in coffee shops.
        It is a coffee beverage consisting strong or bold coffee (sometimes espresso) mixed with scalded milk in approximately a 1:1 ratio.
    </string>
    <string name="mocha">
        Caffè Mocha or café mocha, is an American invention and a variant of a caffe latte, inspired by the Turin coffee beverage Bicerin.
        The term "caffe mocha" is not used in Italy nor in France,where it is referred to as a "mocha latte". Like a caffe latte, it is typically one third
        espresso and two thirds steamed milk, but a portion of chocolate is added, typically in the form of sweet cocoa powder, although many varieties use
        chocolate syrup. Mochas can contain dark or milk chocolate.There are also variants ofthe drink that mix the two syrups; this mixture is referred to by several names, including black and white mocha, tan mocha,
        tuxedo mocha and zebra.
    </string>
    <string name="macho">
        Caffè macchiato is an espresso-based coffee beverage consisting mostly of coffee with a small amount of milk. Translating from the Italian phrase meaning
        marked coffee, this drink is made by "marking" a single shot of espresso with a few drops of frothed milk and served in a demitasse. Relative to other
        espresso-based drinks, a caffè macchiato is closer to a straight espresso, containing substantially less milk than a cappuccino . It can be used as an
        alternative to adding sugar to espresso, muting the bite of the espresso without adding sweetness.
    </string>
<string name="capi"> \u2022 1/3 espresso \n\u2022
        1/3 steamed milk\n\u2022
         1/3 milk foam"</string>
    <string name="caps">1. Prepare the required ammount of espresso in the bottom the cup.\n
2. Prepare the milk .\n
3. When the milk is ready to pour, start pouring from a little height roughly 10cm above the crema, into the center of the drink.  This makes the milk go through the crema rather than cover it.\n
4. Then move the jug closer to the coffee until it is practically touching the cup, keeping the pour in the centre of the drink.  You will see the white of the milk starting to take over creating a circle.\n
5. Just before the cup is full, gently flick the jug forwards.  This draws a line in the circle of white making a heart or apple shape.\n
6. Cocoa powder can be used to decorate the top of the drink although in Italy a cappuccino is often served without any topping.  It is better to avoid other chocolate sprinkles as they tend to be sweet and hide the true flavour of the coffee.</string>
    <string name="espi">\u2022 Ground espresso beans (1/4 oz. per shot)\n
\u2022 Purified water</string>
<string name="espp">"1. Research the different roasts and find what you like the best. Espresso can be made from a variety of roast levels. Roast preferences tend to vary by region.
    Northern Italy prefers a medium roast and Southern Italy prefers a darker roast. In America, espresso roast is assumed to be dark because the major
    companies that brought espresso (Starbucks) were influenced by cafes in southern Italy.\n
    2. Get it fresh, it's better. Freshness is supremely important.
    The closer it is to the roast date, the better. Ideally not over three weeks max since the roast date.\n
    3. It is best to grind your own beans; but not
    with a cheap, electric, blade coffee grinder. These can "burn" the coffee, and it is hard to get a consistent grind. Either use a good espresso grinder, or
    buy fresh ground/roasted beans from a good source espresso shop. Ask how fresh the beans are, and have them ground while you are there. A good espresso
    grind should be about the consistency of sugar. Too coarse, and the water runs through too quickly to pick up the proper elements.\n
    4. Use purified water, without minerals or pollutants, heated to about 200F or 90C degrees. Never use boiling water. Boiling water stops the process
    of creating good coffee dead. Not enough heat, and important components are not extracted from the coffee grind.\n
    5. Use the right amount of ground coffee. This is about 7 grams (1/4 ounce dry volume) for a single shot (one ounce serving of espresso), or 14 grams
    for a double.\n
    6. It is about the grind and the pressure used with the tamper (assuming water temp is good) (the water is the easy part) you can compensate for too loose
    a grind with more pressure and too fine a grind with less.\n
    7. Pack the grinds into the portafilter or group (handle) of the espresso machine using a
    tamper. A tamper is a flat object, approximately the size of the inside of the portafilter, used to compress the grounds to a density that will create
    just the right amount of resistance for the water being forced through the grind. Usually that is around 30 pounds of pressure.\n
    8. If everything above is right, it should take 5-10 seconds for the first 'reluctant hone' drops to appear and 20 to 25 seconds to create one or
    two ounces respectively. Grind and tamp to achieve these parameters. Place your cup's under the group/brew basket (making sure this is seated securely).
    Turned on your espresso machine. You should see a hazel brown cream, called crema or foam, appear at the surface of the coffee when its finished."
</string>
    <string name="amerv"> \u2022 The iced americano is made by combining espresso with cold water instead of hot water.\n
\u2022 A lungo is made by extracting an espresso shot for longer giving more volume, but also extracting some bitter flavours.\n
\u2022 A caffè crema is also made by extracting an espresso shot significantly longer than a lungo.\n
\u2022 A red eye is made with drip coffee instead of hot water, and may be called a shot in the dark.
    </string>
    <string name="ameri"> \u2022 1 shot espresso coffee.\n
 \u2022 Boiling water.\n
 \u2022 Steamed milk.\n
 \u2022 Raw sugar cube.</string>
    <string name="amerp">
        1. Have a latte mug, or coffee mug ready.\n
        2. Pull a 3oz (or more if you like your drink stronger) espresso shot into a separate glass.\n
        3. Pour about 3oz or so of hot water into the mug you plan to drink from.\n
        4. Pour the espresso shot into the mug.\n
        5. Enjoy your Americano!
    </string>
    <string name="lati">\u2022 Milk Foam\n\u2022 Steamed Milk\n\u2022 Espresso
    </string>
    <string name="latP">
       1. Prepare the milk Pour milk into the pitcher so it is 1/3 to 1/2 full and submerge the thermometer. Place the steam wand in the milk so the tip is just below the surface.\n
       2. Steam the milk Turn on the steam and watch the milk increase in volume as it heats and aerates. Turn off the steam when the thermometer reaches 140 degrees Fahrenheit, and set the pitcher aside. Never touch the steam wand or tip once you’ve turned on the steam – it’s hot! Be sure to hold the pitcher by the handle.\n
        3.Fill the portafilter Remove the filter apparatus – or portafilter – from the espresso machine. Pour espresso into the portafilter.\n
        4. Tamp the espresso Pack the grounds firmly with the tamper to keep water from rushing through too quickly. Many portafilters have a “fill line” ¬that the espresso should reach after it has been tamped.\n
        5.  Pull the shot Replace and lock the portafilter and place the mug or latte bowl below the spout. Press the button to start the water. It should take about 25 seconds to “pull a shot” – that is, make 1 to 1 1/2 ounces of espresso.\n
        6.  Finish the latte Flavor your latte if you’d like by adding 1/2 ounce of flavored syrup to the espresso. Pour steamed milk to fill your mug. Use the spoon to hold back the foam. Add sugar or sweetener to taste.
    </string>
    <string name="luiti"> \u2022 Steamed Milk\n\u2022 Brewed Coffee</string>
</resources>