<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_height="match_parent"
        android:background="@drawable/bac">
        <TextView
            android:id="@+id/espd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="center"
            android:textSize="30dp"
            android:paddingBottom="5dp"
            android:textColor="#191970"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esp"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textColor="#050000"
            android:layout_marginBottom="16dp"
            android:paddingLeft="10dp" />

        <TextView
            android:id="@+id/espi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ingredient"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:paddingBottom="5dp"
            android:textColor="#191970"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/espi"
            android:textAllCaps="false"
            android:textColor="#050000"
            android:layout_marginBottom="16dp"
            android:paddingLeft="10dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/esi"
            android:scaleType="fitXY"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/espp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="procedure"
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="30dp"
            android:paddingBottom="5dp"
            android:textColor="#191970"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/espp"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textColor="#050000"
            android:layout_marginBottom="16dp"
            android:paddingLeft="10dp" />

    </LinearLayout>
</ScrollView>